Fixes overflow problem; Compiles SCSS

--- a/public/scss/_base.scss
+++ b/public/scss/_base.scss
@@ -52,3 +52,6 @@ a {
   }
 }
 
+main {
+  overflow: hidden;
+}
